feat: tests and improvements